# howdy_grabbag

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.py
docsrc/source/: common.rst  conf.py  index.rst
docsrc/source/cli/: howdy_grabbag_cli_dehydration_and_compression.rst  howdy_grabbag_cli_miscellaneous.rst  howdy_grabbag_cli_movie_and_tv_conversions.rst  howdy_grabbag_cli_music.rst  howdy_grabbag_cli_spotify.rst
howdy_grabbag/: __init__.py
howdy_grabbag/cli/: __init__.py  convert_mp4movie_to_mkv.py  convert_mp4tv_to_mkv.py  dehydrate_directory.py  dehydrate_tv_shows.py  dvd_to_mkv.py  fix_permissions.py  howdy_music.py  howdy_music_add_spotify.py  howdy_music_compilation.py  rename_mkv_tv.py  spotify_add_and_fix.py  spotify_push_from_plex.py
howdy_grabbag/utils/: __init__.py  dehydrate.py  dvd_utils.py
plexstuff_grabbag/: __init__.py
plexstuff_grabbag/cli/: convert_mp4movie_to_mkv.py  plex_config_excludes.py
