[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "howdy_grabbag"
version = "1.0"
description = "A Bunch of Additional Plex and Multimedia Utility Scripts"
authors = [
    {name = "Tanim Islam", email = "tanim.islam@gmail.com"}
]
readme = "README.rst"  # Add this file if you have one, or remove this line
license = {text = "BSD-2-Clause"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Topic :: Multimedia",
]

# NOTE: The original setup.py checks for these executables at install time:
#       - ffmpeg (required)
#       - ffprobe (required)
#       - mkvmerge (required)
#       - HandBrakeCLI (optional, for movie transcoding)
#       Document these as system requirements in your README.
dependencies = [
    "tabulate",
    "mutagen",
    "howdy",
    "redis",
    "validators",
    "python-magic",
]

[project.urls]
Homepage = "https://github.com/tanimislam/howdy_grabbag"
Repository = "https://github.com/tanimislam/howdy_grabbag"

[project.scripts]
# Movie conversion utilities
convert_mp4movie_to_mkv = "howdy_grabbag.cli.convert_mp4movie_to_mkv:main"
convert_mp4tv_to_mkv    = "howdy_grabbag.cli.convert_mp4tv_to_mkv:main"
dvd_to_mkv              = "howdy_grabbag.cli.dvd_to_mkv:main"
rename_mkv_tv           = "howdy_grabbag.cli.rename_mkv_tv:main"

# Music utilities
howdy_music_compilation = "howdy_grabbag.cli.howdy_music:main_compilation"
howdy_music_individual  = "howdy_grabbag.cli.howdy_music:main_individual"
howdy_music_add_spotify = "howdy_grabbag.cli.howdy_music_add_spotify:main"

# File management utilities
fix_permissions         = "howdy_grabbag.cli.fix_permissions:main"

# Dehydration/compression utilities
dehydrate_tv_shows      = "howdy_grabbag.cli.dehydrate_tv_shows:main"
deavify_tv_shows        = "howdy_grabbag.cli.dehydrate_tv_shows:main_avis"
dehydrate_directory     = "howdy_grabbag.cli.dehydrate_directory:main"
dehydrate_files         = "howdy_grabbag.cli.dehydrate_directory:main_dehydrate_files"
lower_audio_directory   = "howdy_grabbag.cli.dehydrate_directory:main_lower_audio"
lower_audio_files       = "howdy_grabbag.cli.dehydrate_directory:main_lower_audio_files"
list_directory          = "howdy_grabbag.cli.dehydrate_directory:main_list"
subtitle_directory      = "howdy_grabbag.cli.dehydrate_directory:main_subtitles"

# Spotify utilities
spotify_add_and_fix     = "howdy_grabbag.cli.spotify_add_and_fix:main"
spotify_fix_bad         = "howdy_grabbag.cli.spotify_add_and_fix:main_fix_bad"
spotify_push_from_plex  = "howdy_grabbag.cli.spotify_push_from_plex:main"

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests"]
